CVS
- Reduced memory usage when putting Long objects into the database [grantc 08-02-07]
- Initialize Ingres OpenAPI once during module startup [grantc 08-02-07]
- Fixed memory leak when fetching column names for row producing procedures [grantc 08-02-07]
- Fixed parameter handling for procedures with Unicode parameters [grantc 08-02-07]
- ingres_commit() no longer tries to commit when there is no transaction in effect [grantc 08-02-07]
- Removed elimination of UNICODE BOM [grantc 08-02-07]
- Fixed SEGV on module shutdown [grantc 24-01-07]
- Fix build against Ingres II 2.6 [grantc 17-01-07]

version 1.4.1
- Added environment check during initialization  [grantc 18-12-06]
- Fixed SEGV when closing a statement [grantc 13-12-06]
- Fixed spurious E_WARNING with empty LOB dataset [grantc 13-12-06]
- Fixed SEGV when ingres_close() is not called [grantc 13-12-06]
- Fixed auto commit cannot be enabled on shutdown [grantc 27-11-06] 
- Fixed Array index start for php_ii_field_name [grantc 20-11-06] 
- Fixed constant typo [grantc 22-10-06]

version 1.4.0
- Added missing constants for table structures [grantc 20-10-06]
- Fixed SEGV during shutdown when TSRM enabled [grantc 02-10-06]
- Fixed several SEGVs when working with parameters [grantc 02-10-06]
- Added support for Unicode (UTF-16) insertion and retrieval [grantc 15-08-06]
- Added support for updating/inserting LOBS [grantc 04-07-06]
- blob_segment_length is now picked up without using ingres_connect option
parameter [grantc 04-07-06]
- Changed startup to initialize OpenAPI per request [grantc 04-07-06]
- Fixed SEGV when using error reporting functions [grantc 28-04-06]
- Fixed Array so the start index is 1 (original default) and not 0 [grantc 07-04-06]
- Added ini setting ingres.array_index_start to override default start index of 1 [grantc 07-04-06]
- Fixed crash on module unload [grantc 22-03-06]
- Added support for parameter typing to match PHP data to Ingres types [grantc 28-11-05]